objects/appirio_core__Key__c.object
<CustomObject>
    <description>Reserved for internal use.</description>
    <fields>
        <fullName>appirio_core__Expenses_Only_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of licenses in use by expenses only users</description>
        <label>Expenses Only Used</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Expenses_Only__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of licenses available for expenses only users</description>
        <label>Expenses Only</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Key_Value__c</fullName>
        <label>Key Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Open_Enrollment_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of licenses of open enrollment feature currently used</description>
        <label>Open Enrollment Used</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Open_Enrollment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of licenses available for open enrollment feature</description>
        <label>Open Enrollment</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Project_Management_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of project management user licenses in use</description>
        <label>Project Management Used</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Project_Management__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of licenses available for project management users</description>
        <label>Project Management</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Resource_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of active resources</description>
        <label>Resource Used</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Resource__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of active resources available</description>
        <label>Resource</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Timecard_Only_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of timecard only licenses currently in use</description>
        <label>Timecard Only Used</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Timecard_Only__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of licenses available for timecard only users</description>
        <label>Timecard Only</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Key</label>
    <listViews>
        <fullName>appirio_core__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KEY-{0000}</displayFormat>
        <label>Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>